# Experimentation-and-Evaluation-1

./: .gitignore  .pre-commit-config.yaml  AUTHORS  BubbleSortPassPerItem.java  BubbleSortUntilNoChange.java  BubbleSortWhileNeeded.java  Main.java  Procfile  README.md  Sorter.java  build.gradle  gradle.properties  pyproject.toml  settings.gradle
assignment-1/: .gitignore  README.md  build.gradle  gradle.properties  plot.py  settings.gradle
assignment-1/app/: benchmark.csv  build.gradle
assignment-1/config/checkstyle/: checkstyle.xml
assignment-1/src/main/java/ch/usi/experimentation/assignment1/: BigObject.java  BubbleSortUntilNoChange.java  BubbleSortWhileNeeded.java
assignment-2/: .env.template  .eslintignore  .gitignore  AUTHORS  Procfile  README.md  app.js  csvification.py  data.json  display.ipynb  package-lock.json  package.json  pyproject.toml  questions.json  server.js
assignment-2/app/: home.html  start.html
assignment-2/app/css/: home.css  start.css
assignment-2/app/js/: crypto.js  start.js
assignment-2/plots/: plot.py
assignment-2/public/: home.html  start.html
assignment-2/public/css/: start.css
assignment-2/public/js/: start.js
assignment-2/server/: .env.template  .eslintrc.yml  .gitignore  package.json  server.js
assignment-2/server/public/css/: home.css
assignment-2/server/public/js/: crypto.js  start.js
assignment1/: benchmark.csv  bloxplot.py  build.gradle  plot.py
assignment1/src/main/java/ch/usi/experimentation/assignment1/: BubbleSortPassPerItem.java  BubbleSortUntilNoChange.java  BubbleSortWhileNeeded.java  Main.java  (+4 more)
(+9 files in other folders)
